--- a/webScraperapp/ClientApp/package.json
+++ b/webScraperapp/ClientApp/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "ajv": "^8.12.0",
+    "chart.js": "^4.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
     "eslint-config-react-app": "^7.0.1",
@@ -39,6 +40,9 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "nan": "^2.17.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-device-detect": "^2.2.3",
+    "react-visual-grid": "^0.9.5",
     "typescript": "^4.9.5"
   },
   "overrides": {
